service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdfhub-service
  labels:
    app: pdfhub
spec:
  type: NodePort
  selector:
    app: pdfhub
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 31000
